[project]
name = "tweetster_crew"
version = "0.1.0"
description = "tweetster_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
tweetster_crew = "tweetster_crew.main:run"
run_crew = "tweetster_crew.main:run"
train = "tweetster_crew.main:train"
replay = "tweetster_crew.main:replay"
test = "tweetster_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
